--- a/index.html
+++ b/index.html
@@ -2,3 +2,26 @@
 layout: index
 title: Home
 ---
+
+<div class="home">
+
+	<p>
+	<h3>
+“You young [people] should not complain about schooling. Do not immerse yourself so much in the technical that you fail to learn things that are practical. Everything you can learn that is practical—in the house, in the kitchen cooking, in the yard—will be of benefit to you. Never complain about schooling. Study well, and attend always. …
+	<br><br>
+“We are to learn about ‘things that are above, and things that are beneath, things that are in the earth, and upon the earth, and in heaven’ (D&C 101:34).
+	<br><br>
+“You can learn about fixing things and painting things and even sewing things and whatever else is practical. That is worth doing. If it is not of particular benefit to you, it will help you when you are serving other people.”
+	<br>
+President Boyd K. Packer, President of the Quorum of the Twelve Apostles, “Counsel to Young Men,” Ensign, May 2009, 51.
+	<br>
+	</h3>
+	</p>
+	<br>
+	<p>
+	<h3>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Witten by Albert Einstein (1879 - 1955) Physicist & Nobel Laureate -
+	</h3>
+	</p>
+	
+</div>
