--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 layout: index
 title: Home
 ---
-
 <div class="home">
-
+<p>
+<h3>
+	Learning doesn’t have to feel boring or forced. Find somethingyou love to make it exciting.
+</h3>
+</p>
 	<p>
-	<h3>
+	<h5>
+		<br>
 “You young [people] should not complain about schooling. Do not immerse yourself so much in the technical that you fail to learn things that are practical. Everything you can learn that is practical—in the house, in the kitchen cooking, in the yard—will be of benefit to you. Never complain about schooling. Study well, and attend always. …
 	<br><br>
 “We are to learn about ‘things that are above, and things that are beneath, things that are in the earth, and upon the earth, and in heaven’ (D&C 101:34).
@@ -15,13 +19,13 @@ title: Home
 	<br>
 President Boyd K. Packer, President of the Quorum of the Twelve Apostles, “Counsel to Young Men,” Ensign, May 2009, 51.
 	<br>
-	</h3>
+		<br>
+			<br>
+ </h5>
 	</p>
-	<br>
 	<p>
-	<h3>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Witten by Albert Einstein (1879 - 1955) Physicist & Nobel Laureate -
-	</h3>
+	<h4>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Witten by Albert Einstein (1879 - 1955) Physicist & Nobel Laureate -
+</h4>
 	</p>
-	
 </div>
